deploy/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tactical-frontend-service
spec:
  selector:
    app: tactical-frontend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
